# stool

./: .editorconfig  .gitignore  Cargo.toml  build.py  version.json  vut.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/command/: interactive.rs  mod.rs  new.rs  rungame.rs  tui.rs
src/command/interactive/: mod.rs  ui.rs
src/command/tui/: app.rs  create_backup_view.rs  mod.rs  restore_backup_view.rs  state.rs  status_view.rs  style.rs  uihandler.rs
src/config/: mod.rs
src/config/game/: mod.rs
src/config/main/: mod.rs
src/engine/: mod.rs  ui.rs
src/internal/: filter.rs  hash.rs  mod.rs  pid.rs  sync.rs
src/tui/: app.rs  create_backup_view.rs  log_widget.rs  menu_view.rs  mod.rs  restore_backup_view.rs  style.rs  uihandler.rs
src/ui/: fancy.rs  mod.rs  tui.rs
