[package]
name = "stool"
version = "0.1.0"
edition = "2021"
authors = ["Forb.Jok <forbjok@proton.me>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
crc32fast = "1.4.2"
crossterm = "0.28.1"
ctrlc = "3.4.5"
dialoguer = "0.11.0"
dirs = "6.0.0"
filetime = "0.2.25"
globset = "0.4.15"
notify = "8.0.0"
ratatui = "0.29.0"
serde = "1.0.217"
serde_derive = "1.0.217"
sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting", "local-offset", "macros"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.14.4", default-features = false, features = ["tracing-support"] }
tui-textarea = "0.7.0"
walkdir = "2.5.0"
